Implemented the ranking of different class ids